--- a/packages/ibm-products/src/components/Datagrid/styles/_useNestedRows.scss
+++ b/packages/ibm-products/src/components/Datagrid/styles/_useNestedRows.scss
@@ -30,7 +30,10 @@
   border-bottom: none;
 }
 
-.#{$block-class} .#{$block-class}__carbon-row-expandable {
+.#{$block-class} .#{$block-class}__carbon-row-expandable,
+.#{$block-class}
+  tr.#{$block-class}__carbon-nested-row
+  td.#{$block-class}__cell:not(.#{$block-class}__expandable-row-cell) {
   position: relative;
 }
 
@@ -56,6 +59,64 @@
 
 .#{$carbon-prefix}--data-table td.#{$block-class}__expandable-row-cell {
   padding-left: $spacing-03;
+}
+
+.#{$carbon-prefix}--data-table td.#{$block-class}__expandable-row-cell + td,
+.#{$carbon-prefix}--data-table
+  .#{$block-class}__carbon-nested-row:not(
+    .#{$block-class}__carbon-row-expandable
+  )
+  td.#{$block-class}__cell:nth-of-type(2) {
+  position: relative;
+}
+
+.#{$carbon-prefix}--data-table
+  td.#{$block-class}__expandable-row-cell.#{$block-class}__expandable-row-cell--is-expanded
+  + td.#{$block-class}__checkbox-cell__checkbox-cell {
+  border-top: none;
+}
+
+.#{$carbon-prefix}--data-table
+  td.#{$block-class}__expandable-row-cell.#{$block-class}__expandable-row-cell--is-expanded
+  + td::before,
+.#{$carbon-prefix}--data-table
+  .#{$block-class}__carbon-nested-row:not(
+    .#{$block-class}__carbon-row-expandable
+  )
+  td.#{$block-class}__cell:nth-of-type(2)::before,
+.#{$carbon-prefix}--data-table
+  .#{$block-class}__carbon-nested-row
+  td.#{$block-class}__expandable-row-cell
+  + td::before {
+  position: absolute;
+  /* stylelint-disable-next-line carbon/layout-token-use */
+  bottom: -1px;
+  left: 0;
+  width: 1rem;
+  height: 1px;
+  background-color: $ui-01;
+  content: '';
+  transition: background-color $duration--fast-01 motion(entrance, productive);
+}
+
+.#{$carbon-prefix}--data-table
+  tr:hover
+  td.#{$block-class}__expandable-row-cell.#{$block-class}__expandable-row-cell--is-expanded
+  + td::before,
+.#{$carbon-prefix}--data-table
+  .#{$block-class}__carbon-nested-row:hover
+  td.#{$block-class}__expandable-row-cell
+  + td::before,
+.#{$carbon-prefix}--data-table
+  .#{$block-class}__expandable-row--hover
+  td.#{$block-class}__expandable-row-cell
+  + td::before,
+.#{$carbon-prefix}--data-table
+  .#{$block-class}__carbon-nested-row:hover:not(
+    .#{$block-class}__carbon-row-expandable
+  )
+  td.#{$block-class}__cell:nth-of-type(2)::before {
+  background-color: $layer-hover;
 }
 
 .#{$block-class}__carbon-row-expanded {
